LootBoxes and Major adjustments

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -83,6 +83,12 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Reload",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="SwapWeapon",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseWheelAxis)
++ActionMappings=(ActionName="SwapWeapon",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
++ActionMappings=(ActionName="SwapWeapon",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
++ActionMappings=(ActionName="LowerWeapon",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Three)
++ActionMappings=(ActionName="LowerWeapon",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=X)
++ActionMappings=(ActionName="DropWeapon",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=G)
 +AxisMappings=(AxisName="LookUp",Scale=-0.270000,Key=MouseY)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
