--- a/HexArena.uproject
+++ b/HexArena.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{0173DAA5-48F6-82DC-D53B-44B87DF0AEB4}",
+	"EngineAssociation": "5.0",
 	"Category": "",
 	"Description": "",
 	"Modules": [
