--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -3,8 +3,7 @@ ImportTagsFromConfig=True
 WarnOnInvalidTags=True
 ClearInvalidTags=False
 FastReplication=False
-InvalidTagCharacters="\"\',"
-+GameplayTagTableList=None
+InvalidTagCharacters=
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 
