--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -15,7 +15,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="U:/UE5 Projects/HexArena/Build")
+StagingDirectory=(Path="../../../../HexArena1")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
